tests/expected_output/invalid_equal_equal_at_end_of_declaration/000000-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/invalid_equal_equal_at_end_of_declaration.c:2:8: error: invalid '==' at end of declaration; did you mean '='?
        int i == 0;
              ^~
              =
dcc explanation: remember '=' is used to assign a value to a variable, '==' is used to compare values, 
